--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   # POSTGRESQL + POSTGIS + TIMESCALE
   #----------------------------------
   postgresql:
-    image: timescale/timescaledb-postgis
+    image: timescale/timescaledb-postgis:latest-pg11
     container_name: postgresql
     environment:
       - POSTGRES_USER=postgres
@@ -17,7 +17,6 @@ services:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
       - ./data/postgresql:/var/lib/postgresql/data
     restart: unless-stopped
-
 
 
   #------------------------
@@ -43,7 +42,6 @@ services:
       - postgresql
     restart: unless-stopped
 
-
   gatewaybridge:
     image: loraserver/lora-gateway-bridge:2
     container_name: lora-gateway-bridge
@@ -53,14 +51,12 @@ services:
       - ./configuration/lora-gateway-bridge:/etc/lora-gateway-bridge
     restart: unless-stopped
 
-  
   geoserver:
     image: loraserver/lora-geo-server:2
     container_name: lora-geo-server
     volumes:
       - ./configuration/lora-geo-server:/etc/lora-geo-server
     restart: unless-stopped
-
 
   redis:
     image: redis:4-alpine
@@ -69,14 +65,12 @@ services:
       - ./data/redis:/data
     restart: unless-stopped
 
-
   mosquitto:
     image: eclipse-mosquitto
     container_name: lora-mosquitto
     ports:
       - 1883:1883
     restart: unless-stopped
-
 
 
   #----------------
