--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - "5433:5432"
     volumes:
       - ./configuration/postgresql/initdb:/docker-entrypoint-initdb.d
-      - ./data/postgresql:/var/lib/postgresql/data
+      - postgresql-data:/var/lib/postgresql/data
     restart: unless-stopped
 
 
@@ -62,7 +62,7 @@ services:
     image: redis:4-alpine
     container_name: lora-redis
     volumes:
-      - ./data/redis:/data
+      - redis-data:/data
     restart: unless-stopped
 
   mosquitto:
@@ -82,7 +82,7 @@ services:
     ports:
       - "1880:1880"
     volumes:
-      - ./data/nodered:/data
+      - nodered-data:/data
     restart: unless-stopped
 
 
@@ -97,6 +97,14 @@ services:
       - GF_INSTALL_PLUGINS=grafana-worldmap-panel
     ports:
       - "3000:3000"
+    user: "104"
     volumes:
-      - ./data/grafana:/var/lib/grafana
+      - grafana-data:/var/lib/grafana
     restart: unless-stopped
+
+ 
+volumes:
+  grafana-data:
+  nodered-data:
+  postgresql-data:
+  redis-data:
